# bilibili-shell

./: Cargo.toml  README.md  log4rs.yml
.github/workflows/: build.yml
src/: main.rs
src/protocol/login/: mod.rs  qrcode.rs
src/protocol/login/bean/: mod.rs  qrcode_apply.rs
src/request/: request.rs
