[package]
name = "bilibili-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = ['full']}
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
log = "0.4.19"
log4rs = "1.2.0"
qrcode = "0.12.0"
